devtings-app/styles.scss
:root {
  --logoBarHeight: 50px;
  --navBarHeight: 40px;
  --headerHeight: calc(var(--logoBarHeight) + var(--navBarHeight));
  --heroHeight: 55vh;
  --defaultFont: 'Open Sans', sans-serif;
}

.sticky-header {
  background-color: red;
  .is-partial {
    transform: translateY(-40px);
  }
}
.sticky-header:before {
  content: "";
  display: block;
  height: var(--headerHeight);
}

.logo-bar {
  height: var(--logoBarHeight);
  .logo {
    @apply px-1;
    width: 10em;
    color: white;
    height: 100%;
    display: flex;
    &:hover {
      filter: invert(1);
      background-color: black;
    }
  }
}

.nav-bar {
  height: var(--navBarHeight);
}

.hero {
  .hero-content {
    @apply max-w-4xl px-4 py-14 mx-auto relative pb-4 text-left;
    height: var(--heroHeight);
    min-height: 400px;
    max-height: 800px;
    h1 {
      @apply text-7xl font-bold text-white uppercase pb-12;
      line-height: 0.9;
      letter-spacing: -5px;
      text-shadow: 0px 0px 5px rgb(0 0 0 / 40%);
    }
    p {
        @apply px-4 py-2 text-lg relative;
        background-color: rgba(0,0,0,0.1);
        left: -16px;
        font-family: "Open Sans", sans-serif;
    }
  }
  @apply relative text-white justify-center items-center mb-2 w-full;
  .landing-page-background {
    &:before {
      content: "";
      display: block;
      position: absolute;
      left: 0;
      right: 0;
      height: 100px;
      width: 100%;
      background: linear-gradient(
        to bottom,
        rgba(255, 255, 255, 0.8) 0%,
        rgba(255, 255, 255, 0) 100%
      );
    }
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    background-position: center center;
    z-index: -1;
    background-size: cover;
    background-repeat: no-repeat;
    background-image: url(https://i.rtings.com/images/office-bg/office-bw.jpg);
    background-color: #676767;
  }
}

